--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
     "formik": "^2.2.9",
+    "html-react-parser": "^1.4.8",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.1.4",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
